--- a/Exercise 7/180631J_A07_EN4720.tex
+++ b/Exercise 7/180631J_A07_EN4720.tex
@@ -117,7 +117,7 @@
 		\item Is this technique sufficient to protect the privacy of the associated individuals? If not, why?
 		
 		\begin{answer}
-			No. Removing only the name can not guarantee the preservation of privacy, because it can be \textbf{susceptible to linkage attacks} which leads to re-identification of the individuals by linking the information with other external information (zip, sex, birth date).
+			No. Removing only the name can not guarantee the preservation of privacy, because it can be \textbf{susceptible to linkage attacks} which leads to re-identification of the individuals by linking the information with other external information (age, gender, occupation).
 		\end{answer}
 		
 		
@@ -282,7 +282,7 @@
 				
 				\item \textbf{\sc Not protected}:
 				\begin{itemize}
-					\item \textbf{Utility of the data} is destroyed if unnecessary amount of noise is added to the real data. This can make accurate decision making impossible. (eg: a particular application may provide \textit{false or less useful information} to the user depending on the data that the app accessed via a differential private protected database - location based suggestions)
+					\item \textbf{Utility of the data} is destroyed if unnecessary amount of noise is added to the real data. This can make accurate decision making impossible. (eg: a particular application may provide \textit{false or less useful information} to the user depending on the data that the app accessed via a differential private protected database - eg: location based suggestions)
 					
 					\item \textbf{Privacy of groups}: Even though an attacker is unable to infer accurate information about a given individual, the retrieved information can still be used to gain insights about the various groups/ teams inside a database.
 				\end{itemize}
