--- a/Programming Assignment/report/180631J_PA_EN4720.tex
+++ b/Programming Assignment/report/180631J_PA_EN4720.tex
@@ -183,8 +183,21 @@
 		
 		\begin{answer}
 			
-			%% TODO: Write your answer here.	
-			Your answer here.
+			Total number of possible passwords say $P$,
+			
+			\[
+			P = \frac{36^{l+1}-1}{35} = \frac{36^{8+1}-1}{35} \approx 2.9 \times 10^{12}
+			\]
+			
+			Average speed of the attack (this changes runtime-to-runtime and depending on the specifications of the machine used) therefore assume it to be $S = 60 \times 10^{3}$ hashes per second (an approximate value to the value that observed previously).\\
+			
+			Therefore approximate time in days say $D$,
+			
+			\[
+			D = \frac{2.9 \times 10^{12}}{60 \times 10^{3}} \times \frac{1}{24 \times 60 \times 60} \approx 560~ days
+			\]
+			
+			This type of attack is computationally infeasible to be launched using a personal computer. Therefore, this can not be confirmed experimentally.
 			
 		\end{answer}
 		
@@ -212,8 +225,9 @@
 		
 		\begin{answer}
 			
-			%% TODO: Write your answer here.	
-			Your answer here.
+			\begin{itemize}
+				
+			\end{itemize}
 			
 		\end{answer}
 		
