add time per lookup ss

--- a/Programming Assignment/report/180631J_PA_EN4720.tex
+++ b/Programming Assignment/report/180631J_PA_EN4720.tex
@@ -568,8 +568,8 @@
 					\hline
 					$m$ & 25000 & 50000 & 100000 & 200000 & 400000 \\ \hline
 					$k$ & 64 & 32    & 16      & 8      & 4      \\ \hline \hline
-					$p$ & 54\% & 53\%  &  52\%  & 56\%  &  55\%   \\ \hline
-					$t/lookup$ & & & & & \\ \hline
+					$p$ & 54\% & 53\%  &  53\%  & 57\%  &  58\%   \\ \hline
+					$t/lookup$ &  0.11971802806854248 & 0.0302669894695282 &0.00837102961540222 & 0.002074993133544922& 0.0005909802913665772\\ \hline
 				\end{tabular}	
 			\end{center}
 			
